--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Program Files\\Java\\jdk1.8.0_191","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.6"}},"jre:jre:1.6.0"],[{"location":"C:\\Users\\HS\\.m2\\repository\\org\\slf4j\\slf4j-api\\1.6.6\\slf4j-api-1.6.6.jar","type":"JAR","hints":{}},"org.slf4j:slf4j-api:1.6.6"],[{"location":"C:\\Users\\HS\\.m2\\repository\\org\\springframework\\spring-webmvc\\3.1.1.RELEASE\\spring-webmvc-3.1.1.RELEASE.jar","type":"JAR","hints":{}},"org.springframework.web:org.springframework.web.servlet:3.1.1"]]
